[tool.poetry]
name = "video-highlights"
version = "0.1.0"
description = ""
authors = ["Alex Hunsley <alex.hunsley@gmail.com>"]
readme = "README.md"
packages = [{include = "video_highlights"}]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




# sample changes from tca-beam:
#[tool.poetry]
#name = "tca-beam"
#version = "0.7.0"
#description = "Feature stub generation for The Composable Architecture"
#authors = ["Alex Hunsley <alex.hunsley@gmail.com>"]
#readme = "README.md"
#packages = [
#    {include = "tca_beam"},
#]
#[tool.poetry.dependencies]
#python = ">=3.7,<4.0"
#click = "^8.1.3"
#jinja2 = "^3.1.2"
#
#[tool.poetry.scripts]
#tca-beam = "tca_beam.tca_beam:start"
#
#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
